// let user write css in className
// let user write css in className

--- a/client/scss/constbase.scss
+++ b/client/scss/constbase.scss
@@ -7,6 +7,11 @@
 * 07/02/2016
 */
 
+@import "normalize";
+@import "global";
+@import "grid";
+@import "utility";
+
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
 - Grid
