--- a/client/scss/_global.scss
+++ b/client/scss/_global.scss
@@ -1,9 +1,8 @@
 @import "variables";
-
-.constbase {
+html {}
+body {
     font-family: $cb-sans;
     color: $cb-black;
-    font-size: 130%;
     h1,
     h2,
     h3,
@@ -11,13 +10,52 @@
     h5,
     h6,
     p {
-        line-height: 1.2em;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        line-height: 1.25em;
+    }
+    h1 {
+        line-height: 1.15em;}
+    h2 {
+        line-height: 1.2em;}
+    h3 {
+
+    }
+    h4 {
+
+    }
+    h5 {
+
+    }
+    h6 {
+
+    }
+    p {
+        line-height: 1.25em;
+    }
+    .info-group {
+        padding: 10px 0;
+        .title {
+            margin: 0;
+            margin-bottom: 3px;
+        }
+        .body {
+            margin: 0;
+        }
+    }
+    .wrapper {
+        padding: 10px;
+    }
+    .grid {
+        display: flex;
+          align-items: flex-start;
+        .item {
+            width: 100%;
+            margin: 0px;
+            padding: 10px 0px;
+            position: relative;
+        }
     }
 }
-.constbase.light {
-    font-weight: 300;
+body.light {
     h1,
     h2,
     h3,
@@ -25,44 +63,53 @@
     h5,
     h6,
     p {
+        margin: 0;
+        line-height: 2rem;
         font-weight: 300;
     }
 }
-
-hr {
-    margin-top: 3rem;
-    margin-bottom: 3.5rem;
-    border-width: 0;
-    border-top: 1px solid #E1E1E1;
-}
-
-.wrapper {
-    padding: 10px 10px;
-}
-
-.fullScream {
-    height: 100vh;
-}
-.halfScream {
-    height: 50vh;
+body.dev-mode {
+    div {
+        box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.2);
+    }
+    .dev-label{
+        position: absolute !important;
+        color: rgba(255,255,255,1);
+        background: rgba(0,0,0,1);
+        opacity: 0.3;
+        padding: 0px 5px;
+        font-size: 0.3em;
+        top: -1px;
+        left: 0px;
+        // box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.2);
+    }
+    .devPanel {
+        position: absolute !important;
+        background: red;
+        top: 0px;
+        padding: 5px 10px;
+        right: 0px;
+    }
 }
 
 /* Larger than mobile */
-
 @media (min-width: 400px) {}
-
 /* Larger than phablet (also point when grid becomes active) */
-
 @media (min-width: 550px) {}
-
 /* Larger than tablet */
-
-@media (min-width: 750px) {}
-
+@media (min-width: 750px) {
+}
 /* Larger than desktop */
-
 @media (min-width: 1000px) {}
-
 /* Larger than Desktop HD */
-
 @media (min-width: 1200px) {}
+/* Smaller than mobile */
+@media (max-width: 400px) {}
+/* Smaller than phablet (also point when grid becomes active) */
+@media (max-width: 550px) {}
+/* Smaller than tablet */
+@media (max-width: 750px) {}
+/* Smaller than desktop */
+@media (max-width: 1000px) {}
+/* Smaller than Desktop HD */
+@media (max-width: 1200px) {}
