--- a/client/scss/_global.scss
+++ b/client/scss/_global.scss
@@ -13,29 +13,22 @@ body {
         line-height: 1.25em;
     }
     h1 {
-        line-height: 1.15em;}
+        line-height: 1.15em;
+    }
     h2 {
-        line-height: 1.2em;}
-    h3 {
-
+        line-height: 1.2em;
     }
-    h4 {
-
-    }
-    h5 {
-
-    }
-    h6 {
-
-    }
+    h3 {}
+    h4 {}
+    h5 {}
+    h6 {}
     p {
         line-height: 1.25em;
     }
     .info-group {
         padding: 10px 0;
         .title {
-            margin: 0;
-            margin-bottom: 3px;
+            margin: 0 0 3px;
         }
         .body {
             margin: 0;
@@ -46,11 +39,11 @@ body {
     }
     .grid {
         display: flex;
-          align-items: flex-start;
+        align-items: flex-start;
         .item {
             width: 100%;
-            margin: 0px;
-            padding: 10px 0px;
+            margin: 0;
+            padding: 10px 0;
             position: relative;
         }
     }
@@ -68,37 +61,13 @@ body.light {
         font-weight: 300;
     }
 }
-body.dev-mode {
-    div {
-        box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.2);
-    }
-    .dev-label{
-        position: absolute !important;
-        color: rgba(255,255,255,1);
-        background: rgba(0,0,0,1);
-        opacity: 0.3;
-        padding: 0px 5px;
-        font-size: 0.3em;
-        top: -1px;
-        left: 0px;
-        // box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.2);
-    }
-    .devPanel {
-        position: absolute !important;
-        background: red;
-        top: 0px;
-        padding: 5px 10px;
-        right: 0px;
-    }
-}
 
 /* Larger than mobile */
 @media (min-width: 400px) {}
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {}
 /* Larger than tablet */
-@media (min-width: 750px) {
-}
+@media (min-width: 750px) {}
 /* Larger than desktop */
 @media (min-width: 1000px) {}
 /* Larger than Desktop HD */
