--- a/client/scss/normalize.scss
+++ b/client/scss/normalize.scss
@@ -14,7 +14,7 @@ html {
 //
 body {
     overflow-x: hidden;
-    margin: 0;
+    margin: 0px;
 }
 // HTML5 display definitions
 // ==========================================================================
